<resources>
    <string name="app_name">My BMI Calculator</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="calculate">Calculate</string>
    <string name="reset">Reset Data</string>
    <string name="date">Last calculated date: </string>
    <string name="bmi">Last calculated BMI: </string>
    <string name="additional">You are </string>


</resources>
